;;;; -*- coding: utf-8; fill-column: 78 -*-
changes in sbcl-1.0.28 relative to 1.0.27:
  * minor incompatible changes: echo-streams now propagate unread-char to the
    underlying input stream, and no longer permit unreading more than one
    character.
  * improvement: on x86/x86-64 Lisp call frames now have the same layout as C
    frames, allowing for instance more reliable backtraces.
  * improvement: the debugger REPL can now reference lexical variables
    by name directly for code compiled with (DEBUG 3).
  * improvement: errors from malformed declarations now have better source
    paths associated with them. (thanks to Tobias Rittweiler)
  * optimization: faster local calls on x86/x86-64
  * bug fix: some error messages for out-of-bound array indexes confused the
    index and the bound. (thanks to Stas Boukarev)
  * bug fix: pretty printing malformed DEFPACKAGE forms (thanks to Sidney
    Markowitz)
  * bug fix: running regressions tests in shells without OSTYPE set now works.
    (reported by Harald Hanche-Olsen)
  * bug fix: more robust static space exhaustion signalling from
    MAKE-STATIC-VECTOR (thanks to Daniel Lowe)
  * bug fix: (SETF DOCUMENTATION) for anonymous function now throws the
    docstring away instead of storing it under names such as (LAMBDA (X)).
    (reported by Leslie Polzer)
  * bug fix: timers could go off in the wrong order, be delayed indefinitely
    (thanks to Ole Arndt for the patch)
  * bug fix: RESTART-FRAME and RETURN-FROM-FRAME stack corruption
  * bug fix: the discriminating function for PRINT-OBJECT no longer preserves
    potentially-invalid effective methods in its cache.
  * bug fix: SB-INTROSPECT:FIND-DEFINITION-SOURCE now works with funcallable
    instances as well (thanks to Paul Khuong)
  * bug fix: using RUN-PROGRAM does not interfere with SB-POSIX:WAIT,
    SB-POSIX:WAITPID and their C equivalents.
  * bug fix: RUN-PROGRAM does not crash on Darwin when stressed.

changes in sbcl-1.0.27 relative to 1.0.26: